# backend/src/main/java/com/viegym/identity/AuthProvider.java
@@ -2,5 +2,6 @@ package com.viegym.identity;
 
 public enum AuthProvider {
     LOCAL,
-    GOOGLE
+    GOOGLE,
+    FACEBOOK
 }
